tests-integration/fixtures/checking/277_row_tails_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
unify ::
  forall (r :: Row (Type -> Type)).
    Box (r :: Row (Type -> Type)) -> Box (r :: Row (Type -> Type)) -> Box (r :: Row (Type -> Type))
withF :: forall (r :: Row (Type -> Type)). Box ( f :: F | (r :: Row (Type -> Type)) )
withG :: forall (r :: Row (Type -> Type)). Box ( g :: G | (r :: Row (Type -> Type)) )
test :: forall (t3 :: Row Type). Box ( f :: F, g :: G | (t3 :: Row Type) )

Types
F :: Type -> Type
G :: Type -> Type
Box :: Row (Type -> Type) -> Type

Roles
F = [Nominal]
G = [Nominal]
Box = [Nominal]

Diagnostics
error[CannotUnify]: Cannot unify 'Type -> Type' with 'Type'
  --> 13:20..13:25
   |
13 | test = unify withF withG
   |                    ^~~~~
error[CannotUnify]: Cannot unify 'Row (Type -> Type)' with 'Row Type'
  --> 13:20..13:25
   |
13 | test = unify withF withG
   |                    ^~~~~
error[CannotUnify]: Cannot unify 'Type -> Type' with 'Type'
  --> 13:20..13:25
   |
13 | test = unify withF withG
   |                    ^~~~~
error[CannotUnify]: Cannot unify 'Row (Type -> Type)' with 'Row Type'
  --> 13:20..13:25
   |
13 | test = unify withF withG
   |                    ^~~~~
